<resources>
    <string name="app_name">Quake Watch Austria</string>

    <string name="datum">Datum</string>
    <string name="zeit">Zeit</string>
    <string name="ort">Ort</string>
    <string name="next">Weiter</string>
    <string name="plz">Plz</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="stock">Stockwerk</string>
    <string name="jnein">JA/NEIN</string>
    <string name="title_activity_image_full_screen">ImageFullScreen</string>
    <string name="title_activity_sub_activity__guide">SubActivity_Guide</string>
    <string name="title_activity_sub_activity__app__guide">SubActivity_App_Guide</string>
    <string name="title_activity_sub_activity__news">SubActivity_News</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="loc">Location</string>

    <string-array name="magAa">
        <item>0.0+</item>
        <item>1.0+</item>
        <item>2.0+</item>
        <item>3.0+</item>
        <item>4.0+</item>
        <item>5.0+</item>
        <item>6.0+</item>
        <item>7.0+</item>
        <item>8.0+</item>
        <item>9.0+</item>
    </string-array>

    <string-array name="date">
        <item>Letzte Stunde</item>
        <item>Heute</item>
        <item>Letzten 24 Stunden</item>
        <item>Letzte Woche</item>
        <item>Alle</item>
    </string-array>

    <string-array name="distance">
        <item>Near me</item>
        <item>1000 km entfernt</item>
        <item>2000 km entfernt</item>
        <item>3000 km entfernt</item>
        <item>Alle</item>
    </string-array>

    <string-array name="limit">
        <item>10</item>
        <item>20</item>
        <item>50</item>
        <item>100</item>
        <item>1000</item>
    </string-array>

    <string-array name="sort">
        <item>nach Magnitude</item>
        <item>nach Datum</item>
    </string-array>
    <string name="title_activity_subactivity__zusatz_fragen">Subactivity_ZusatzFragen</string>
</resources>
