<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent">


<ScrollView
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_above="@+id/next">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="?android:listDivider"
        android:orientation="vertical"
        android:showDividers="middle">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/LayoutDatum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="10dp">

            <EditText
                android:id="@+id/datum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/datum"
                android:inputType="date"
                android:textColor="@android:color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:id="@+id/LayoutZeit"
            android:paddingTop="10dp">

            <EditText
                android:id="@+id/zeit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/zeit"
                android:inputType="time"
                android:textColor="@android:color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:id="@+id/LayoutOrt"
            android:paddingTop="10dp">

            <EditText
                android:id="@+id/Ort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ort"
                android:inputType="text"
                android:textColor="@android:color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:id="@+id/LayoutPlz"
            android:paddingTop="10dp">

            <EditText
                android:id="@+id/plz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/plz"
                android:inputType="number"
                android:textColor="@android:color/black" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
</ScrollView>

<Button
    android:id="@+id/next"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:text="Weiter"
    android:textColor="@android:color/white"
    android:padding="10dp"
    android:background="@color/ColorPrimary" />
</RelativeLayout>