<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/LayoutDatum"
        android:gravity="left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp">

        <EditText
            android:id="@+id/datum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/zeit"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:editable="false"
            android:ems="10"
            android:layout_marginRight="30dp"
            android:focusable="false"
            android:gravity="left"
            android:hint="@string/datum"

            android:inputType="date"
            android:linksClickable="false"
            android:longClickable="false" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/LayoutZeit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/LayoutDatum"
        android:layout_alignStart="@+id/LayoutDatum"
        android:layout_below="@+id/LayoutDatum"
        android:layout_marginTop="25dp">

        <EditText
            android:id="@+id/zeit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/datum"
            android:layout_alignStart="@+id/datum"
            android:layout_below="@+id/LayoutZeit"
            android:layout_marginTop="25dp"
            android:clickable="true"
            android:editable="false"
            android:layout_marginRight="30dp"
            android:ems="10"
            android:focusable="false"
            android:gravity="left"
            android:hint="@string/zeit"
            android:inputType="time" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/LayoutOrt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/LayoutZeit"
        android:layout_alignLeft="@+id/LayoutZeit"
        android:layout_alignRight="@+id/LayoutZeit"
        android:layout_alignStart="@+id/LayoutZeit"
        android:layout_below="@+id/LayoutZeit"
        android:layout_marginTop="25dp">

        <EditText
            android:id="@+id/Ort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/LayoutZeit"
            android:layout_alignLeft="@+id/LayoutZeit"
            android:layout_alignRight="@+id/LayoutZeit"
            android:layout_alignStart="@+id/LayoutZeit"
            android:layout_below="@+id/LayoutZeit"
            android:autoText="false"
            android:layout_marginRight="30dp"
            android:gravity="left"
            android:hint="@string/ort"
            android:inputType="textCapWords" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/LayoutPlz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/LayoutOrt"
        android:layout_alignLeft="@+id/LayoutOrt"
        android:layout_alignRight="@+id/LayoutOrt"
        android:layout_alignStart="@+id/LayoutOrt"
        android:layout_below="@+id/LayoutOrt"
        android:layout_marginTop="25dp">

        <EditText
            android:id="@+id/plz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/LayoutOrt"
            android:layout_alignLeft="@+id/LayoutOrt"
            android:layout_alignRight="@+id/LayoutOrt"
            android:layout_alignStart="@+id/LayoutOrt"
            android:layout_below="@+id/LayoutOrt"
            android:autoText="false"
            android:layout_marginRight="25dp"
            android:gravity="left"
            android:hint="@string/plz"
            android:inputType="textCapWords" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/next"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="WEITER"
        android:layout_marginBottom="20dp"
        android:textAllCaps="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>