<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/next"
        android:layout_alignParentTop="true"
        android:clickable="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="?android:listDivider"
            android:orientation="vertical"
            android:showDividers="middle">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginBottom="30dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/ic_my_location_black_36dp"
                    android:tint="#666666" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/LayoutLoc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="0dp"
                    android:paddingRight="16dp"
                    android:paddingTop="10dp"
                    android:layout_marginLeft="65dp"
                    android:layout_marginTop="5dp">

                    <EditText
                        android:id="@+id/loc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/loc"
                        android:focusable="false"
                        android:editable="false"
                        android:inputType="number"
                        android:textColor="@android:color/black" />
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginBottom="30dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/ic_date_range_black_36dp"
                    android:tint="#666666"
                    android:adjustViewBounds="true" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/LayoutDatum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="65dp"
                    android:layout_toEndOf="@id/img"
                    android:paddingRight="16dp"
                    android:paddingTop="10dp"
                    android:layout_marginTop="5dp">

                    <EditText
                        android:id="@+id/datum"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:editable="false"
                        android:focusable="false"
                        android:hint="@string/datum"
                        android:textColor="@android:color/black" />
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginBottom="30dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/ic_access_time_black_36dp"
                    android:tint="#666666" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/LayoutZeit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="65dp"
                    android:paddingRight="16dp"
                    android:paddingTop="10dp"
                    android:layout_marginTop="5dp">

                    <EditText
                        android:id="@+id/zeit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:editable="false"
                        android:focusable="false"
                        android:hint="@string/zeit"
                        android:textColor="@android:color/black" />

                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/ColorPrimary"
        android:padding="10dp"
        android:text="Weiter"
        android:textColor="@android:color/white" />
</RelativeLayout>